--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,9 +1,26 @@
-<ul class="list-group">
-  <% @restaurant.reviews.each do |review| %>
-    <li class="list-group-item"><%= review.content %></li>
-  <% end %>
-</ul>
+<p id="notice"><%= notice %></p>
 
-<%= link_to 'back', restaurants_path %>
-<%= link_to 'edit', edit_restaurant_path(@restaurant) %>
-<%= link_to 'delete', restaurant_path(@restaurant), method: :delete, data: { confirm: ' Are you sure? '} %>
+<p>
+  <strong>Name:</strong>
+  <%= @restaurant.name %>
+</p>
+
+<p>
+  <strong>Address:</strong>
+  <%= @restaurant.address %>
+</p>
+
+<p>
+  <strong>Phone number:</strong>
+  <%= @restaurant.phone_number %>
+</p>
+
+  <% @restaurant.reviews.each do |review| %>
+    <p><%= review.content %></p>
+    <hr>
+  <% end %>
+
+<%= link_to 'Edit', edit_restaurant_path(@restaurant) %>
+<%= link_to 'Back', restaurants_path %>
+<%= link_to 'Add a new review', new_restaurant_review_path(@restaurant) %>
+<%= link_to 'Delete', restaurant_path(@restaurant), method: :delete, data: { confirm: ' Are you sure? '} %>
