--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for [ @restaurant, @review ] do |f| %>
   <%= f.input :content %>
-  <%= f.submit "Submit review", class: "btn btn-primary" %>
+  <%= f.submit "Create review", class: "btn btn-primary" %>
 <% end %>
